# MyHouseCRM

./: .flake8  .gitignore  .pre-commit-config.yaml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
deploy/backend/: Dockerfile
deploy/nginx/: default.conf
src/authentication/: forms.py  urls.py  views.py
src/authentication/templates/authentication/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html
src/core/adminlte/: api.py  apps.py  forms.py  mixins.py  urls.py  views.py
src/core/static/cabinet/: custom.css
src/crm/: api.py  apps.py  context_processors.py  forms.py  mixins.py  models.py  urls.py  views.py
src/crm/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_cashbox_options.py  0005_alter_callmaster_master_alter_callmaster_master_type_and_more.py
src/crm/templates/crm/: master_call.html  master_call_create.html  master_call_list.html  message_detail.html  message_list.html  messages.html  profile.html  profile_update.html  receipt.html  receipt_detail.html  receipt_list.html  summary.html  tariffs.html
src/house/: apps.py  models.py
src/house/migrations/: 0001_initial.py  0002_initial.py
src/user/: models.py
src/user/migrations/: 0001_initial.py
src/website/: apps.py  models.py  urls.py  views.py
src/website/migrations/: 0001_initial.py
templates/: admin_base.html  base.html  cabinet_base.html
(+77 files in other folders)
