[project]
name = "myhousecrm"
version = "0.1.0"
description = ""
authors = [
    {name = "Yorzh Maksym"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "django-phonenumber-field[phonenumbers] (>=8.4.0,<9.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-environ (>=0.13.0,<0.14.0)",
    "django-ninja (>=1.6.2,<2.0.0)",
    "django-recaptcha (>=4.1.0,<5.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
